// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`offline cms should edit the body 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
      <meta charset=\\"UTF-8\\">
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
      <title>Future</title>
    </head>
    <body><p>Hello</p></body></html>"
`;

exports[`offline cms should prettify 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Future</title>
  </head>
  <body>
    <ul>
      <li>
        Publish offline-cms to
        <a href=\\"https://github.com/divyenduz/offline-cms\\">Github</a> &#x2705;
      </li>
      <li>Publish offline-cms tweet</li>
    </ul>
  </body>
</html>
"
`;

exports[`offline cms should prettify after edit 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Future</title>
  </head>
  <body>
    <p>Hello</p>
  </body>
</html>
"
`;

exports[`offline cms should return the body 1`] = `
"
      <ul>
        <li>
          Publish offline-cms to
          <a href=\\"https://github.com/divyenduz/offline-cms\\">Github</a> &#x2705;
        </li>
        <li>Publish offline-cms tweet</li>
      </ul>
    
  
"
`;

exports[`offline cms should return the content 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
      <meta charset=\\"UTF-8\\">
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
      <title>Future</title>
    </head>
    <body>
      <ul>
        <li>
          Publish offline-cms to
          <a href=\\"https://github.com/divyenduz/offline-cms\\">Github</a> &#x2705;
        </li>
        <li>Publish offline-cms tweet</li>
      </ul>
    
  
</body></html>"
`;

exports[`offline cms should return the shell 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
      <meta charset=\\"UTF-8\\">
      <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
      <title>Future</title>
    </head>
    <body></body></html>"
`;
